<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtabmap_utils</name>
  <version>0.0.0</version>
  <description>The rtabmap_utils package</description>

  <maintainer email="davidbsp@ingeniarius.pt">david</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rtabmap_ros</depend>
  <depend>urdf</depend>
  <depend>rplidar_ros</depend>
  
  <!-- ROS2에서는 hector_mapping 대신 slam_toolbox 사용 -->
  <depend>slam_toolbox</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
